# agora

./: .gitignore  HANDOFF.md  README.md  _gen.py  _gen2.py  _gen3.py  _gen_adapter.py  _tmp_writer.py  _w.py  _write_institutional.py  pyproject.toml
.github/ISSUE_TEMPLATE/: agora-task.yml
agora/adapters/: bls_adapter.py  congress_adapter.py  edgar_activist_adapter.py  edgar_filings_adapter.py  edgar_insider_adapter.py  edgar_institutional_adapter.py  finra_short_interest_adapter.py  finra_short_volume_adapter.py  fred_adapter.py  options_sentiment_adapter.py  sec_ftd_adapter.py  threshold_list_adapter.py  treasury_adapter.py  yahoo_options_adapter.py  yahoo_quotes_adapter.py  (+1 more)
docs/: agora-spec.md
tests/: test_bls_adapter.py  test_cointegration.py  test_congress_adapter.py  test_congress_tracker.py  test_correlation_matrix.py  test_correlation_network.py  test_earnings_context.py  test_edgar_activist_adapter.py  test_edgar_filings_adapter.py  test_edgar_institutional_adapter.py  test_factor_decomposition.py  test_finra_short_interest_adapter.py  test_ftd_analyzer.py  test_insider_activity.py  test_macro_dashboard.py  test_options_sentiment_adapter.py  test_pca_factors.py  test_random_matrix_filter.py  test_screener_api.py  test_sector_analysis.py  test_sector_short_sentiment.py  test_short_composite.py  test_short_factor_analysis.py  test_short_intel_api.py  test_short_squeeze_detector.py  test_threshold_list_adapter.py  test_volatility_decomposition.py  test_yahoo_options_adapter.py
webapp/: index.html  package-lock.json  package.json  vite.config.ts
(+169 files in other folders)
